--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
 
   <style>
       body{
-        background: : #FAFAFA;
+        background-color: #FAFAFA;
+      }
+
+      .box {
+        background-color: white; 
+        border-radius: ;
       }
   </style>
 
